# not-nintendogs

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/not_nintendogs/: __main__.py  logger.py  sprites.py
src/not_nintendogs/data/: __init__.py  doggo.txt
src/not_nintendogs/data/sprites/: dog.toml
tests/: demo_sprites.py
