[tool.poetry]
name = "not-nintendogs"
version = "0.1.0"
description = ""
authors = ["ionite34 <dev@ionite.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
textual = "^0.1.18"
# Newer opencv 4.6 had issues with attribute inspection, pinning 4.5 for now
opencv-python = ">= 4.5.4.58, <=4.5.5.62"
nurses-2 = "0.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
pre-commit = "^2.20.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
